--- a/src/main/resources/assets/spacefactory/lang/en_us.json
+++ b/src/main/resources/assets/spacefactory/lang/en_us.json
@@ -7,6 +7,7 @@
   "block.spacefactory.electric_furnace": "Electric Furnace",
   "block.spacefactory.grinder": "Grinding Mill",
   "block.spacefactory.extractor": "Extractor",
+  "item.spacefactory.refined_copper_ingot": "Refined Copper Ingot",
   "item.spacefactory.refined_iron_ingot": "Refined Iron Ingot",
   "spacefactory.decoration": "Decoration",
   "itemGroup.spacefactory.decoration": "Space Factory - Decoration",
