--- a/src/main/resources/assets/spacefactory/lang/en_us.json
+++ b/src/main/resources/assets/spacefactory/lang/en_us.json
@@ -11,5 +11,6 @@
   "item.spacefactory.refined_iron_ingot": "Refined Iron Ingot",
   "spacefactory.decoration": "Decoration",
   "itemGroup.spacefactory.decoration": "Space Factory - Decoration",
-  "block.spacefactory.refined_iron_block": "Block of Refined Iron"
+  "block.spacefactory.refined_iron_block": "Block of Refined Iron",
+  "block.spacefactory.refined_copper_block": "Block of Refined Copper"
 }
