Add AE2-like Grinder & Crank, add Rubber Root crop (wip)

--- a/src/main/resources/assets/spacefactory/lang/en_us.json
+++ b/src/main/resources/assets/spacefactory/lang/en_us.json
@@ -7,11 +7,20 @@
   "block.spacefactory.electric_furnace": "Electric Furnace",
   "block.spacefactory.grinder": "Grinding Mill",
   "block.spacefactory.extractor": "Extractor",
-  "item.spacefactory.refined_copper_ingot": "Refined Copper Ingot",
+  "block.spacefactory.primitive_grinder": "Primitive Grinding Mill",
+  "block.spacefactory.crank": "Wooden Crank",
   "item.spacefactory.refined_iron_ingot": "Refined Iron Ingot",
+  "item.spacefactory.refined_copper_ingot": "Refined Copper Ingot",
+  "item.spacefactory.refined_iron_nugget": "Refined Iron Nugget",
+  "item.spacefactory.refined_copper_nugget": "Refined Copper Nugget",
+  "item.spacefactory.rubber_root_seeds": "Rubber Root Seeds",
+  "item.spacefactory.rubber_root": "Rubber Root",
+  "item.spacefactory.raw_rubber": "Raw Rubber",
   "spacefactory.decoration": "Decoration",
   "itemGroup.spacefactory.decoration": "Space Factory - Decoration",
   "block.spacefactory.refined_iron_block": "Block of Refined Iron",
   "block.spacefactory.refined_copper_block": "Block of Refined Copper",
+  "container.spacefactory.primitive_grinder": "Primitive Grinding Mill",
+  "container.spacefactory.electric_furnace": "Electric Furnace",
   "container.spacefactory.grinder": "Grinding Mill"
 }
