--- a/src/main/resources/assets/spacefactory/lang/en_us.json
+++ b/src/main/resources/assets/spacefactory/lang/en_us.json
@@ -13,8 +13,6 @@
   "item.spacefactory.refined_copper_ingot": "Refined Copper Ingot",
   "item.spacefactory.refined_iron_nugget": "Refined Iron Nugget",
   "item.spacefactory.refined_copper_nugget": "Refined Copper Nugget",
-  "item.spacefactory.rubber_root_seeds": "Rubber Root Seeds",
-  "item.spacefactory.rubber_root": "Rubber Root",
   "item.spacefactory.raw_rubber": "Raw Rubber",
 
   "item.spacefactory.copper_nugget": "Copper Nugget",
@@ -38,7 +36,6 @@
   "item.spacefactory.refined_iron_unicutter": "Refined Iron All-Cutters",
   "item.spacefactory.refined_iron_wrench": "Refined Iron Wrench",
 
-  "item.spacefactory.camouflage_cloth": "Camouflage Cloth",
   "item.spacefactory.flak_vest": "Flak Vest",
 
   "item.spacefactory.netherite_scrap_dust": "Pulverized Netherite Scrap",
@@ -60,6 +57,8 @@
   "itemGroup.spacefactory.decoration": "Space Factory - Decoration",
   "block.spacefactory.refined_iron_block": "Block of Refined Iron",
   "block.spacefactory.refined_copper_block": "Block of Refined Copper",
+  "block.spacefactory.neosteel_block": "Block of Neosteel",
+  "block.spacefactory.iridium_block": "Block of Iridium",
   "container.spacefactory.primitive_grinder": "Primitive Grinding Mill",
   "container.spacefactory.electric_furnace": "Electric Furnace",
   "container.spacefactory.grinder": "Grinding Mill"
