--- a/src/main/resources/assets/spacefactory/lang/en_us.json
+++ b/src/main/resources/assets/spacefactory/lang/en_us.json
@@ -1,20 +1,20 @@
 {
   "spacefactory": "Space Factory",
   "spacefactory.technology": "Technology",
+  "spacefactory.decoration": "Decoration",
   "itemGroup.spacefactory.technology": "Space Factory - Technology",
+  "itemGroup.spacefactory.decoration": "Space Factory - Decoration",
+  "block.spacefactory.refined_iron_block": "Block of Refined Iron",
+  "block.spacefactory.refined_copper_block": "Block of Refined Copper",
+  "block.spacefactory.neosteel_block": "Block of Neosteel",
+  "block.spacefactory.iridium_block": "Block of Iridium",
+  "block.spacefactory.primitive_grinder": "Primitive Grinding Mill",
+  "block.spacefactory.crank": "Wooden Crank",
   "block.spacefactory.generator": "Solid Fuel Generator",
-  "block.spacefactory.solar_panel": "Solar Panel",
   "block.spacefactory.electric_furnace": "Electric Furnace",
   "block.spacefactory.grinder": "Grinding Mill",
   "block.spacefactory.extractor": "Extractor",
-  "block.spacefactory.primitive_grinder": "Primitive Grinding Mill",
-  "block.spacefactory.crank": "Wooden Crank",
-  "item.spacefactory.refined_iron_ingot": "Refined Iron Ingot",
-  "item.spacefactory.refined_copper_ingot": "Refined Copper Ingot",
-  "item.spacefactory.refined_iron_nugget": "Refined Iron Nugget",
-  "item.spacefactory.refined_copper_nugget": "Refined Copper Nugget",
-  "item.spacefactory.raw_rubber": "Raw Rubber",
-
+  "block.spacefactory.solar_panel": "Solar Panel",
   "item.spacefactory.copper_nugget": "Copper Nugget",
   "item.spacefactory.stone_dust": "Stone Dust",
   "item.spacefactory.coal_dust": "Coal Dust",
@@ -22,43 +22,32 @@
   "item.spacefactory.iron_dust": "Iron Dust",
   "item.spacefactory.gold_dust": "Gold Dust",
   "item.spacefactory.diamond_dust": "Diamond Dust",
-
-  "item.spacefactory.rubber": "Rubber",
-
-  "item.spacefactory.circuit": "Circuit",
-
+  "item.spacefactory.ender_pearl_dust": "Ender Pearl Dust",
+  "item.spacefactory.netherite_scrap_dust": "Pulverized Netherite Scrap",
   "item.spacefactory.nether_quartz_dust": "Nether Quartz Dust",
-  "item.spacefactory.silicon_ingot": "Silicon",
-
-  "item.spacefactory.refined_copper_dust": "Refined Copper Dust",
+  "item.spacefactory.refined_iron_ingot": "Refined Iron Ingot",
   "item.spacefactory.refined_iron_dust": "Refined Iron Dust",
+  "item.spacefactory.refined_iron_nugget": "Refined Iron Nugget",
+  "item.spacefactory.refined_copper_ingot": "Refined Copper Ingot",
+  "item.spacefactory.refined_copper_dust": "Refined Copper Dust",
+  "item.spacefactory.refined_copper_nugget": "Refined Copper Nugget",
+  "item.spacefactory.silicon_ingot": "Silicon",
+  "item.spacefactory.neosteel_ingot": "Neosteel Ingot",
+  "item.spacefactory.raw_iridium": "Raw Iridium",
+  "item.spacefactory.iridium_ingot": "Iridium Ingot",
+  "item.spacefactory.iridium_dust": "Iridium Dust",
+  "item.spacefactory.iridium_nugget": "Iridium Nugget",
+  "item.spacefactory.small_iridium_dust": "Tiny Pile of Iridium Dust",
+  "item.spacefactory.raw_rubber": "Raw Rubber",
+  "item.spacefactory.rubber": "Rubber",
+  "item.spacefactory.circuit": "Circuit",
+  "item.spacefactory.flak_vest": "Flak Vest",
   "item.spacefactory.refined_iron_machete": "Refined Iron Machete",
   "item.spacefactory.refined_iron_unicutter": "Refined Iron All-Cutters",
   "item.spacefactory.refined_iron_wrench": "Refined Iron Wrench",
-
-  "item.spacefactory.flak_vest": "Flak Vest",
-
-  "item.spacefactory.netherite_scrap_dust": "Pulverized Netherite Scrap",
-  "item.spacefactory.raw_iridium": "Raw Iridium",
-  "item.spacefactory.iridium_ingot": "Iridium Ingot",
-  "item.spacefactory.iridium_nugget": "Iridium Nugget",
-  "item.spacefactory.iridium_dust": "Iridium Dust",
-  "item.spacefactory.small_iridium_dust": "Tiny Pile of Iridium Dust",
-
-  "item.spacefactory.nano_steel_ingot": "Neosteel Ingot",
-  "item.spacefactory.nano_steel_machete": "Neosteel Machete",
-  "item.spacefactory.nano_steel_unicutter": "Neosteel All-Cutters",
-  "item.spacefactory.nano_steel_wrench": "Neosteel Wrench",
-
-  "item.spacefactory.ender_pearl_dust": "Ender Pearl Dust",
-  "item.spacefactory.warp_prism": "Warp Prism",
-
-  "spacefactory.decoration": "Decoration",
-  "itemGroup.spacefactory.decoration": "Space Factory - Decoration",
-  "block.spacefactory.refined_iron_block": "Block of Refined Iron",
-  "block.spacefactory.refined_copper_block": "Block of Refined Copper",
-  "block.spacefactory.neosteel_block": "Block of Neosteel",
-  "block.spacefactory.iridium_block": "Block of Iridium",
+  "item.spacefactory.neosteel_machete": "Neosteel Machete",
+  "item.spacefactory.neosteel_unicutter": "Neosteel All-Cutters",
+  "item.spacefactory.neosteel_wrench": "Neosteel Wrench",
   "container.spacefactory.primitive_grinder": "Primitive Grinding Mill",
   "container.spacefactory.electric_furnace": "Electric Furnace",
   "container.spacefactory.grinder": "Grinding Mill"
