--- a/src/main/resources/assets/spacefactory/lang/en_us.json
+++ b/src/main/resources/assets/spacefactory/lang/en_us.json
@@ -42,9 +42,9 @@
   "item.spacefactory.rubber": "Rubber",
   "item.spacefactory.circuit": "Circuit",
   "item.spacefactory.flak_vest": "Flak Vest",
-  "item.spacefactory.refined_iron_machete": "Refined Iron Machete",
-  "item.spacefactory.refined_iron_unicutter": "Refined Iron All-Cutters",
-  "item.spacefactory.refined_iron_wrench": "Refined Iron Wrench",
+  "item.spacefactory.refined_iron_machete": "Machete",
+  "item.spacefactory.refined_iron_unicutter": "All-Cutters",
+  "item.spacefactory.refined_iron_wrench": "Wrench",
   "item.spacefactory.neosteel_machete": "Neosteel Machete",
   "item.spacefactory.neosteel_unicutter": "Neosteel All-Cutters",
   "item.spacefactory.neosteel_wrench": "Neosteel Wrench",
